# personal-website

./: .gitignore  ChangeLog.md  Dockerfile  README.md  build-and-exec.fish  cabal.project  dev.sh  fourmolu.yaml  hie.yaml  package.yaml  personal-website.cabal  shell.nix  stack.yaml
.github/workflows/: build-publish.yml
app/: Main.hs
assets/: color-generator-samples.md
src/: Application.hs
src/PersonalWebsite/: API.hs  About.hs  Blog.hs  BlogRepo.hs  Blogs.hs  Capabilities.hs  Colors.hs  Cookies.hs  HTMX.hs  Handlers.hs  Home.hs  Image.hs  Internal.hs  KVCache.hs  Katip.hs  LiveReload.hs  Logging.hs  Markdown.hs  Monad.hs  Nord.hs  Pages.hs  Pandoc.hs  Random.hs  Strategies.hs  TH.hs  Toys.hs  Tracing.hs
src/PersonalWebsite/API/: CSS.hs  Container.hs
src/PersonalWebsite/About/: API.hs  Capabilities.hs  Pages.hs
src/PersonalWebsite/Blogs/: API.hs  Capabilities.hs  Data.hs  Pages.hs
src/PersonalWebsite/CSS/: Parser.hs
src/PersonalWebsite/Colors/: API.hs  CodeStyle.hs  Conversion.hs  Data.hs  Pages.hs  Palette.hs  RandomGen.hs
src/PersonalWebsite/HTMX/: Attributes.hs
src/PersonalWebsite/Home/: API.hs  Pages.hs
src/PersonalWebsite/Pages/: Blog.hs  Container.hs  Home.hs
src/PersonalWebsite/Toys/: API.hs  PaletteGenerator.hs
