cabal-version:      1.12
name:               personal-website
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/githubuser/personal-website#readme>

homepage:           https://github.com/githubuser/personal-website#readme
bug-reports:        https://github.com/githubuser/personal-website/issues
author:             Author name here
maintainer:         example@example.com
copyright:          2022 Author name here
license:            BSD3
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/githubuser/personal-website

library
  exposed-modules:
    Application
    PersonalWebsite.API
    PersonalWebsite.API.CSS
    PersonalWebsite.Blogs
    PersonalWebsite.Blogs.API
    PersonalWebsite.Blogs.Capabilities
    PersonalWebsite.Blogs.Data
    PersonalWebsite.Blogs.Pages
    PersonalWebsite.Colors
    PersonalWebsite.Colors.API
    PersonalWebsite.Colors.CodeStyle
    PersonalWebsite.Colors.Conversion
    PersonalWebsite.Colors.Data
    PersonalWebsite.Colors.Palette
    PersonalWebsite.Colors.RandomGen
    PersonalWebsite.Cookies
    PersonalWebsite.CSS.Parser
    PersonalWebsite.Handlers
    PersonalWebsite.Home
    PersonalWebsite.Home.API
    PersonalWebsite.Home.Pages
    PersonalWebsite.Internal
    PersonalWebsite.Katip
    PersonalWebsite.KVCache
    PersonalWebsite.Monad
    PersonalWebsite.Pages
    PersonalWebsite.Pages.Container
    PersonalWebsite.Pandoc
    PersonalWebsite.Random
    PersonalWebsite.Toys
    PersonalWebsite.Toys.API
    PersonalWebsite.Toys.PaletteGenerator
    PersonalWebsite.Tracing

  other-modules:      Paths_personal_website
  hs-source-dirs:     src
  default-extensions:
    NoImplicitPrelude
    Arrows
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveGeneric
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

  ghc-options:
    -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wpartial-fields -Wredundant-constraints

  build-depends:
      aeson
    , attoparsec
    , base                                  >=4.7 && <5
    , base58-bytestring
    , binary
    , blaze-html
    , blaze-markup
    , bytestring
    , cache
    , capability
    , clay
    , cookie
    , cryptohash
    , directory
    , file-embed
    , hs-opentelemetry-api
    , hs-opentelemetry-instrumentation-wai
    , hs-opentelemetry-sdk
    , http-api-data
    , http-types
    , katip
    , katip-wai
    , mtl
    , optics
    , optparse-applicative
    , pandoc
    , polysemy
    , polysemy-zoo
    , random
    , relude
    , servant
    , servant-blaze
    , servant-server
    , skylighting
    , text
    , time
    , unliftio
    , vault
    , wai
    , warp
    , yaml

  default-language:   Haskell2010

executable personal-website-exe
  main-is:            Main.hs
  other-modules:      Paths_personal_website
  hs-source-dirs:     app
  default-extensions:
    NoImplicitPrelude
    Arrows
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveGeneric
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

  ghc-options:
    -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wpartial-fields -Wredundant-constraints -threaded -rtsopts
    -with-rtsopts=-N

  build-depends:
      aeson
    , attoparsec
    , base                  >=4.7 && <5
    , base58-bytestring
    , binary
    , blaze-html
    , blaze-markup
    , bytestring
    , capability
    , clay
    , cookie
    , file-embed
    , http-api-data
    , http-types
    , katip
    , katip-wai
    , mtl
    , optics
    , optparse-applicative
    , pandoc
    , personal-website
    , polysemy
    , random
    , relude
    , servant
    , servant-blaze
    , servant-server
    , skylighting
    , text
    , time
    , unliftio
    , wai
    , warp
    , yaml

  default-language:   Haskell2010

test-suite personal-website-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      Paths_personal_website
  hs-source-dirs:     test
  default-extensions:
    NoImplicitPrelude
    Arrows
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveGeneric
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

  ghc-options:
    -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wpartial-fields -Wredundant-constraints -threaded -rtsopts
    -with-rtsopts=-N

  build-depends:
      aeson
    , attoparsec
    , base                  >=4.7 && <5
    , base58-bytestring
    , binary
    , blaze-html
    , blaze-markup
    , bytestring
    , capability
    , clay
    , cookie
    , file-embed
    , http-api-data
    , http-types
    , katip
    , katip-wai
    , mtl
    , optics
    , optparse-applicative
    , pandoc
    , personal-website
    , polysemy
    , random
    , relude
    , servant
    , servant-blaze
    , servant-server
    , skylighting
    , text
    , time
    , unliftio
    , wai
    , warp
    , yaml

  default-language:   Haskell2010
