cabal-version:      2.2
name:               personal-website
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/githubuser/personal-website#readme>

license:            BSD-3-Clause
license-file:       LICENSE
author:             Wael Ben Dhia
maintainer:         waelbendhia@gmail.com
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/githubuser/personal-website

library
  exposed-modules:
    Application
    PersonalWebsite.About
    PersonalWebsite.About.API
    PersonalWebsite.About.Capabilities
    PersonalWebsite.About.Pages
    PersonalWebsite.API
    PersonalWebsite.API.CSS
    PersonalWebsite.Blogs
    PersonalWebsite.Blogs.API
    PersonalWebsite.Blogs.Capabilities
    PersonalWebsite.Blogs.Data
    PersonalWebsite.Blogs.Pages
    PersonalWebsite.Colors
    PersonalWebsite.Colors.API
    PersonalWebsite.Colors.CodeStyle
    PersonalWebsite.Colors.Conversion
    PersonalWebsite.Colors.Data
    PersonalWebsite.Colors.Pages
    PersonalWebsite.Colors.Palette
    PersonalWebsite.Colors.RandomGen
    PersonalWebsite.Cookies
    PersonalWebsite.CSS.Parser
    PersonalWebsite.Handlers
    PersonalWebsite.Home
    PersonalWebsite.Home.API
    PersonalWebsite.Home.Pages
    PersonalWebsite.HTMX
    PersonalWebsite.Image
    PersonalWebsite.Internal
    PersonalWebsite.Katip
    PersonalWebsite.KVCache
    PersonalWebsite.Monad
    PersonalWebsite.Pages
    PersonalWebsite.Pages.Container
    PersonalWebsite.Pandoc
    PersonalWebsite.Random
    PersonalWebsite.TH
    PersonalWebsite.Toys
    PersonalWebsite.Toys.API
    PersonalWebsite.Toys.PaletteGenerator
    PersonalWebsite.Tracing

  other-modules:      Paths_personal_website
  hs-source-dirs:     src
  default-extensions:
    NoImplicitPrelude
    Arrows
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveGeneric
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

  ghc-options:
    -Wall -Werror -Wwarn=missing-home-modules -Wcompat -Widentities
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

  build-depends:
    , aeson                                 >=2.2.1.0 && <2.3
    , aeson-optics                          >=1.2.1
    , attoparsec                            >=0.14.4  && <2
    , base                                  >=4.7     && <5
    , base58-bytestring                     >=0.1.0
    , binary                                >=0.8.9.1
    , blaze-html                            >=0.9.1.2
    , blaze-markup                          >=0.8.3.0
    , bytestring
    , cache
    , clay                                  >=0.14.0
    , cookie
    , cryptohash
    , directory
    , file-embed
    , hip                                   >=1.5.6.0
    , hs-opentelemetry-api
    , hs-opentelemetry-instrumentation-wai
    , hs-opentelemetry-sdk
    , http-api-data
    , http-types
    , katip                                 >=0.8.7.4
    , katip-wai
    , mtl                                   >=2.3.1
    , network-uri                           >=2.6.4.2
    , optics                                >=0.4.2.1
    , optparse-applicative
    , pandoc                                >=3.1.9
    , polysemy                              >=1.9.1.3
    , polysemy-zoo
    , process
    , random
    , relude                                >=1.2.1.0
    , servant                               >=0.20.1
    , servant-blaze
    , servant-server
    , skylighting
    , template-haskell
    , text
    , time
    , unliftio
    , vault
    , wai
    , warp
    , yaml

  default-language:   Haskell2010

executable personal-website-exe
  main-is:            Main.hs
  other-modules:      Paths_personal_website
  hs-source-dirs:     app
  default-extensions:
    NoImplicitPrelude
    Arrows
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveGeneric
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

  ghc-options:
    -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wpartial-fields -Wredundant-constraints -threaded -rtsopts
    -with-rtsopts=-N

  build-depends:
    , aeson
    , attoparsec
    , base                  >=4.7     && <5
    , base58-bytestring
    , binary
    , blaze-html            >=0.9.1.2
    , blaze-markup          >=0.8.3.0
    , bytestring
    , clay                  >=0.14.0
    , cookie
    , file-embed
    , http-api-data
    , http-types
    , katip
    , katip-wai
    , mtl
    , optics
    , optparse-applicative
    , pandoc
    , personal-website
    , polysemy
    , random
    , relude
    , servant
    , servant-blaze
    , servant-server
    , skylighting
    , text
    , time
    , unliftio
    , wai
    , warp
    , yaml

  default-language:   Haskell2010

test-suite personal-website-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      Paths_personal_website
  hs-source-dirs:     test
  default-extensions:
    NoImplicitPrelude
    Arrows
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveGeneric
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

  ghc-options:
    -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wpartial-fields -Wredundant-constraints -threaded -rtsopts
    -with-rtsopts=-N

  build-depends:
    , aeson
    , attoparsec
    , base                  >=4.7 && <5
    , base58-bytestring
    , binary
    , blaze-html
    , blaze-markup
    , bytestring
    , capability
    , clay
    , cookie
    , file-embed
    , http-api-data
    , http-types
    , katip
    , katip-wai
    , mtl
    , optics
    , optparse-applicative
    , pandoc
    , personal-website
    , polysemy
    , random
    , relude
    , servant
    , servant-blaze
    , servant-server
    , skylighting
    , text
    , time
    , unliftio
    , wai
    , warp
    , yaml

  default-language:   Haskell2010
